# Ruckus-vSZ-MCP

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: mcp-developer.agent.md  mcp-documenter.agent.md  mcp-scaffolder.agent.md  mcp-tester.agent.md
src/mcp_server/: server.py
src/mcp_server/api/: __init__.py  client.py
src/mcp_server/prompts/: example.py
src/mcp_server/resources/: example.py
src/mcp_server/tools/: __init__.py  aaa.py  alarms.py  aps.py  block_clients.py  clients.py  dhcp.py  domains.py  example.py  monitoring.py  rogue.py  system.py  wlans.py  zones.py
tests/: test_prompts.py  test_resources.py  test_server.py  test_tools.py
